<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F7F8F5"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp">

            <TextView
                android:id="@+id/card_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/hint_news_category"
                android:maxLines="1"
                android:textAllCaps="true"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/card_title"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_category"
                android:layout_marginTop="4dp"
                android:hint="@string/hint_news_title"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/card_news_text"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_title"
                android:layout_marginTop="4dp"
                android:hint="@string/hint_news_text"
                android:maxLines="4"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/card_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:contentDescription="@string/picture_iv_alt"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/card_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="4dp"
                android:hint="@string/hint_news_date"
                android:maxLines="1"
                android:textSize="10sp"
                card_view:ignore="SmallSp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>

